8.Kubernetes/argocd/argocd-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: argocd
  namespace: argocd

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`argocd.soytola.site`)
      kind: Rule

      services:
        - name: argocd-server
          port: 443
          scheme: https
          serversTransport: argocd-transport

  tls:
    secretName: argocd-tls
